$Id$

2021-03-02  Christian Franke  <franke@computer.org>

	smartd_warning.sh.in: Fix handling of multiple email addresses
	in conjunction with plugin scripts (#1454).
	Pass modified SMARTD_ADDRESS also to all plugin scripts.
	Provide original value as SMARTD_ADDRESS_ORIG.
	Exit immediately if a script is missing.
	smartd.conf.5.in: Document error handling and SMARTD_ADDRESS_ORIG.

2021-02-14  Alex Samorukov  <samm@os2.kiev.ua>

	os_darwin.cpp: implement APM set feature, based on hdparm macOS sources

2021-02-09  Christian Franke  <franke@computer.org>

	configure.ac: Include required library functions in check for
	'-fstack-protector' (#1439).

	Print drive database version in smartctl and smartd.
	knowndrives.cpp, knowndrives.h: Parse VERSION string.
	ataprint.cpp: Print version.  Remove '-P showall' help string.
	smartd.cpp: Print version.

2021-02-07  Christian Franke  <franke@computer.org>

	Makefile.am: 'check' target now also checks the built-in database.

	smartctl.cpp: Fix 'optopt' range check
	(cppcheck 2.3: invalidFunctionArg).

	scsiprint.cpp: Silence cppcheck 2.3 'unreadVariable' warning.

	scsiata.cpp: Remove unused function 'has_usbcypress_pass_through()'.

	Improve reproducibility if SOURCE_DATE_EPOCH if set (GH pull/89).
	configure.ac: Define SOURCE_DATE_EPOCH in CPPFLAGS.
	utility.cpp: Print SOURCE_DATE_EPOCH value if specified.
	Don't include configure arguments then.
	cppcheck.sh: Silence related 'ConfigurationNotChecked' message.

	Always add timestamp to JSON output (#1436).
	Move non-JSON timestamp output to common function.

2021-02-01  Christian Franke  <franke@computer.org>

	Silence more cppcheck 2.3 warnings.

	Add C++11 'override' specifier where applicable (cppcheck: missingOverride).

	os_freebsd.cpp, os_linux.cpp: Replace deprecated bcopy() and bzero()
	(cppcheck: bcopyCalled, bzeroCalled).

	cppcheck.sh: Add '-c' option.
	Remove suppress: bcopyCalled, bzeroCalled, missingOverride.
	Mark cppcheck 1.86, 2.2 and 2.3 as tested.
