@@ -1,5 +1,17 @@
 $Id$
 
+2021-03-08  Christian Franke  <franke@computer.org>
+
+	drivedb.h:
+	- Toshiba MG04ACA... Enterprise HDD: Rename, merge entries,
+	  add *NY variant (GH issues/90).
+	- Toshiba MG05ACA... Enterprise Capacity HDD (#1327).
+	- Toshiba MG08ACA... Enterprise Capacity HDD.
+	- Toshiba N300 NAS HDD (#1143, #1236, #1251, #1323).
+	- Toshiba P300 (CMR): Rename.
+	- Toshiba P300 (SMR) (#1430).
+	- Toshiba X300: HDWF180 (#1277), 10-16TB.
+
 2021-03-02  Christian Franke  <franke@computer.org>
 
 	smartd_warning.sh.in: Fix handling of multiple email addresses
